Fix checkbox not showing on inline tabular. ( #58 )

--- a/bootstrap_admin/static/admin/css/forms.css
+++ b/bootstrap_admin/static/admin/css/forms.css
@@ -341,6 +341,9 @@
   right: 5px;
   top: 5px;
 }
+.inline-group .checkbox input {
+  margin: 0;
+}
 
 /* Calendar widget */
 
